# hello-world

./: pyproject.toml
.github/workflows/: tests.yaml
src/: __init__.py  __main__.py
tests/: test_hello.py
