[tool.poetry]
name = "hello-world"
version = "1.0.0a1"
description = "Hello in Python3.11"
authors = ["yeghorkikhai <yeghorkikhai@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
